@@ -18,5 +18,6 @@ x11-plugins/qutim-phonon:0.3-live **
 x11-plugins/qutim-qmlpopups:0.3-live **
 x11-plugins/qutim-quetzal:0.3-live **
 x11-plugins/qutim-urlpreview:0.3-live **
+x11-plugins/qutim-vkontakte:0.3-live **
 x11-plugins/qutim-weather:0.3-live **
 x11-plugins/qutim-yandexnarod:0.3-live **
