@@ -1,4 +1,4 @@
 EBUILD qutim-0.2.9999.ebuild 3593 RMD160 66e2782b4b0da5113de225e789822ceeaddb7675 SHA1 17c8e5111206059d216b4317bc715ffd4a804b33 SHA256 3df6b6d86b22c44583d680c73c19dfe960acaae72a0ab5f42bc234e41e34e3fe
-EBUILD qutim-0.3.9999.ebuild 4465 RMD160 df2482d8cc1de0c0d82f4af7bee8471c2f41136d SHA1 18a822b80c061b9f60bda46e1c80f66490d7990d SHA256 e89b92b7c70cdc6bf757e75d155e0299e682719b3a0df74b7ec1cb88a3c09a46
+EBUILD qutim-0.3.9999.ebuild 4565 RMD160 6d281e21cbaa8835c0090d84f36f61a38e7aae66 SHA1 e55561c25349ba2ebf889b9e8334d33a89c7d714 SHA256 4172fdd015664c914046cfe194bca218b602aba291da518fd207a899e06694a0
 MISC ChangeLog 499 RMD160 37f2330fd91dbfefaa6e60633a11e81c0af7c492 SHA1 62773aae54276fae2b8e64ffd2356fa40a6fde74 SHA256 293b91a169bc4a40df4281f8cef3dca07b9209024d96a665bd160d5628e2429d
 MISC metadata.xml 825 RMD160 58170622b93ab4288d519750e29a3b78c9e4d72b SHA1 47d9262307a0d3caf1cc55c437e97e8012a5d128 SHA256 9036abf0ea9c9fa0e64765932b9d13b32f09e768086bfd4abc40072207fdde0a
