@@ -1,3 +1,4 @@
 EBUILD qutim-vkontakte-0.2.9999.ebuild 1086 RMD160 9f954a4fd17ac010296c881add82001ea0f8eea6 SHA1 2a482ad02c7c0510d27676352ea95177c0535382 SHA256 16b9f8d7dc1573c30fdc42cab0f9427b9a4604565b19f3dde237fe1646ab917e
-MISC ChangeLog 395 RMD160 41df8e28d42b5e2d8afb3b8075ad5d85648e4b7d SHA1 14581682b42902e1dde56aa726bfd77c6becd76e SHA256 c3180a14cd59b19e968704d4c7dd2024001ae641ae27e1acc87173791214e7e0
+EBUILD qutim-vkontakte-0.3.9999.ebuild 1052 RMD160 52385e8452b6a3f33a00f7c073d610070a65f29c SHA1 795187b302f7e2754d087d0c3a2c20d083f74d8b SHA256 46b50d074dc9ccef36a2934f8b25f265ae96109e541e0b7a9046f8b3543316b8
+MISC ChangeLog 553 RMD160 190f0510a8a0e80f455ada7fd66fc98faf488465 SHA1 b4754833bcfebcd318900a13916f25df40e801fa SHA256 d3bd5b588bc05d8debf609b861330f2cd45eaf745f795468027215dc6f27e6da
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
