@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qutim-vkontakte-0.3.9999 (04 Aug 2010)
+
+  04 Aug 2010; Viktor Lazarev <taurus101v@gmail.com>
+  +qutim-vkontakte-0.3.9999.ebuild:
+  ebuild for 0.3-live slot
+
   04 Jun 2010; Viktor Lazarev <taurus101v@gmail.com>
   qutim-vkontakte-0.2.9999.ebuild:
   0.2.9999 is slotted
